--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-standard": "^16.0.3",
@@ -24,6 +25,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
+    "postcss": "^8.2.15",
+    "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
 }
